<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultFragment">

    <TextView
        android:id="@+id/txtTitle"
        android:text="@string/results"
        android:textSize="22sp"
        android:textStyle="bold"
        android:paddingBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtSpeedKmH"
        android:text="@string/speed_kmh"
        android:textSize="20sp"
        android:paddingBottom="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtSpeedMS"
        android:text="@string/speed_ms"
        android:textSize="20sp"
        android:paddingBottom="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtErro"
        android:textColor="#FF0000"
        android:textSize="18sp"
        android:paddingBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnNewCalc"
        android:text="@string/new_calculation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
